Added tests + small fixes